[package]
name = "dkim_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.12.3"
candid = "0.9.9"
cargo-cache = "0.8.3"
ic-cdk = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dkim = {git="https://github.com/dipanshuhappy/dkim-icp"}
